tests/Checker/everything/errors/6e.vc
int main() {
    boolean a;
    a = "123";
    return 1;
}
